# stablediffusion-pipelines-cpp

./: CMakeLists.txt  CONTRIBUTING.md  README.md
doc/build_doc/linux/: README.md
doc/build_doc/windows/: README.md
samples/: CMakeLists.txt  audio_to_audio.cpp  img_to_wav.cpp  invalid_parameter_check.cpp  simple_cmdline_parser.h  simple_tokenizer_test.cpp  txt_to_audio.cpp  txt_to_audio_interpolate.cpp  txt_to_img.cpp  txt_to_img_interpolate.cpp
stable_diffusion_ov/: CMakeLists.txt
stable_diffusion_ov/audio_utils/: spectrogram_image_converter.cpp  wav_util.cpp
stable_diffusion_ov/include/cpp_stable_diffusion_audio_ov/: riffusion_audio_to_audio_pipeline.h  spectrogram_image_converter.h  stable_diffusion_audio_interpolation_pipeline.h  visibility.h  wav_util.h
stable_diffusion_ov/include/cpp_stable_diffusion_ov/: basic_tokenizer.h  callbacks.h  clip_const_factory.h  clip_tokenizer.h  model_collateral_cache.h  openvino_model_utils.h  openvino_text_encoder.h  openvino_unet.h  openvino_vae_decoder.h  openvino_vae_encoder.h  pretrained_tokenizer.h  pretrained_tokenizer_base.h  special_tokens_mixin.h  stable_diffusion_interpolation_pipeline.h  stable_diffusion_pipeline.h  tokenization_utils.h  visibility.h
stable_diffusion_ov/openvino_models/: model_collateral_cache.cpp  openvino_text_encoder.cpp  openvino_unet.cpp  openvino_vae_decoder.cpp  openvino_vae_encoder.cpp
stable_diffusion_ov/pipelines/: riffusion_audio_to_audio_pipeline.cpp  riffusion_pipeline.cpp  riffusion_pipeline.h  stable_diffusion_audio_interpolation_pipeline.cpp  stable_diffusion_interpolation_pipeline.cpp  stable_diffusion_pipeline.cpp  unet_loop.h  unet_loop_batch2.cpp  unet_loop_batch2.h  unet_loop_sd15_internal_blobs.cpp  unet_loop_sd15_internal_blobs.h  unet_loop_split.cpp  unet_loop_split.h
stable_diffusion_ov/schedulers/: euler_discrete_scheduler.cpp  euler_discrete_scheduler.h  pndm_scheduler.cpp  pndm_scheduler.h  scheduler.h  scheduler_factory.cpp  scheduler_factory.h  ustm_scheduler.cpp  ustm_scheduler.h
stable_diffusion_ov/tokenizers/: basic_tokenizer.cpp  clip-bpe-merges.h  clip-vocab.h  clip_const_factory.cpp  clip_tokenizer.cpp  pretrained_tokenizer.cpp  pretrained_tokenizer_base.cpp  special_tokens_mixin.cpp  unicode_const.h
stable_diffusion_ov/utils/: rng.h
